--- a/src/components/reusable/dropdown/dropdown.scss
+++ b/src/components/reusable/dropdown/dropdown.scss
@@ -38,6 +38,7 @@ slot[name='icon']::slotted(*) {
   border: 1px solid var(--kd-color-border-forms-default);
   border-radius: 4px;
   height: 48px;
+  min-width: 95px;
   padding: 0 48px 0 16px;
   cursor: pointer;
   font-weight: var(--kd-font-weight-regular);
